Updated index and styles2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="John, Kurle, computer science, cs, intern, internship">
     <meta name="author" content="Jack Kurle">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kurlecore</title>
+    <title>John P Kurle</title>
     <script src="script.js" defer></script>
 </head>
 
