Made mobile layout smaller

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="description" content="Landing Page">
-    <meta name="keywords" content="John, Kurle, computer science, cs, intern, internship">
+    <meta name="keywords" content="John, Kurle, John Kurle, computer science, cs, intern, internship">
     <meta name="author" content="John Kurle">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John P Kurle</title>
